🐛 fix overflow on queue page

--- a/src/renderer/ui/containers/AppContent/pages/queues/style/index.scss
+++ b/src/renderer/ui/containers/AppContent/pages/queues/style/index.scss
@@ -6,6 +6,7 @@
     gap: 20px;
     flex-grow: 1;
     align-self: stretch;
+    overflow: auto;
 
     > span {
         font-weight: 600;
